fixed call button in header on small screens

--- a/site/css/custom.css
+++ b/site/css/custom.css
@@ -30,6 +30,12 @@
   color: #69c7ff;
 }
 
+@media (max-width: 400px) {
+  .button-md {
+    padding: 20px;
+  }
+}
+
 /* ============================ */
 /* INTRO */
 /* ============================ */
